Fixed submenu overlay hidden behind other components

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4,3 +4,7 @@ html {
 body {
     height: 100%;
 }
+
+.p-menubar-submenu {
+    z-index: 999 !important;
+}
